--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'com.jaredrummler:material-spinner:1.3.1'
+
+    implementation 'com.github.highcharts:highcharts-android:10.2.0'
+
 }
